--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="middle-container">
     <div class="profile">
       <img class="my-image"
-        src="C:\Users\Rashika\Desktop\web development\CSS-My site\teacher.png"
+        src="CSS-My site\teacher.png"
         alt="profile image">
       <h2>Hello</h2>
     <h3>Student of Computer Science and Engineering </h3>
@@ -35,7 +35,7 @@
       </h2>
       <div class="skill-row">
         <img class="computer_image"
-        src="C:\Users\Rashika\Desktop\web development\CSS-My site\CSS - My Site Images\computer.png"
+        src="CSS-My site\CSS - My Site Images\computer.png"
           alt="compguter_image">
         <h3>Design & Development</h3>
         <p class="Skills-paragraph1">
@@ -45,7 +45,7 @@
       </div>
       <div class="skill-row">
         <img class="carrom_img"
-          src="C:\Users\Rashika\Desktop\web development\CSS-My site\carrom.png"
+          src="CSS-My site\carrom.png"
           alt="carrom_img">
         <h3>Carrom Challenge</h3>
         <p class="Skills-paragraph2">
