--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
   <div class="top_container">
-    <img class="top_cloud" src="CSS - My Site Images\cloud.png" alt="mycloud">
+    <img class="top_cloud" src="C:\Users\Rashika\Desktop\web development\CSS-My site\CSS - My Site Images\cloud.png" alt="mycloud">
     <h1>I'm Rashika</h1>
     <h2>
       <p  class="pro">a student.</p>
     </h2>
-    <img class="bottom_cloud" src="CSS - My Site Images\cloud.png" alt="mycloud">
-    <img src="CSS - My Site Images\mountain.png" alt="mymountain">
+    <img class="bottom_cloud" src="C:\Users\Rashika\Desktop\web development\CSS-My site\CSS - My Site Images\cloud.png" alt="mycloud">
+    <img src="C:\Users\Rashika\Desktop\web development\CSS-My site\CSS - My Site Images\mountain.png" alt="mymountain">
   </div>
   <div class="middle-container">
     <div class="profile">
       <img class="my-image"
-        src="CSS - My Site Images\teacher.png"
+        src="teacher.png"
         alt="profile image">
       <h2>Hello</h2>
     <h3>Student of Computer Science and Engineering </h3>
@@ -35,7 +35,7 @@
       </h2>
       <div class="skill-row">
         <img class="computer_image"
-        src="CSS - My Site Images\computer.png"
+        src="C:\Users\Rashika\Desktop\web development\CSS-My site\CSS - My Site Images\computer.png"
           alt="compguter_image">
         <h3>Design & Development</h3>
         <p class="Skills-paragraph1">
@@ -45,7 +45,7 @@
       </div>
       <div class="skill-row">
         <img class="carrom_img"
-          src="CSS - My Site Images\carrom.png"
+          src="carrom.png"
           alt="carrom_img">
         <h3>Carrom Challenge</h3>
         <p class="Skills-paragraph2">
@@ -63,7 +63,7 @@
         Love carrom as much as I do?Let's talk about how awesome they're!!
         We can talk about our design while we play!
       </p>
-      <a href="rashikasuresh5758@gmail.com" class="btn">
+      <a href="www.rashikasuresh5758@gmail.com" class="btn">
           CONTACT ME
       </a>
     </div>
