--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
   <div class="top_container">
-    <img class="top_cloud" src="C:\Users\Rashika\Desktop\web development\CSS-My site\CSS - My Site Images\cloud.png" alt="mycloud">
+    <img class="top_cloud" src="cloud.png" alt="mycloud">
     <h1>I'm Rashika</h1>
     <h2>
       <p  class="pro">a student.</p>
     </h2>
-    <img class="bottom_cloud" src="C:\Users\Rashika\Desktop\web development\CSS-My site\CSS - My Site Images\cloud.png" alt="mycloud">
-    <img src="C:\Users\Rashika\Desktop\web development\CSS-My site\CSS - My Site Images\mountain.png" alt="mymountain">
+    <img class="bottom_cloud" src="cloud.png" alt="mycloud">
+    <img src="mountain.png" alt="mymountain">
   </div>
   <div class="middle-container">
     <div class="profile">
@@ -35,7 +35,7 @@
       </h2>
       <div class="skill-row">
         <img class="computer_image"
-        src="C:\Users\Rashika\Desktop\web development\CSS-My site\CSS - My Site Images\computer.png"
+        src="computer.png"
           alt="compguter_image">
         <h3>Design & Development</h3>
         <p class="Skills-paragraph1">
